examples/main/default/objects/Training__c/fields/Commercial_Software__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Software?</label>
    <type>Checkbox</type>
</CustomField>