examples/main/default/objects/Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Commercial_Software__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>Pega</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>